fixed scrollbar on map

--- a/penncycle/assets/less/penncycle.less
+++ b/penncycle/assets/less/penncycle.less
@@ -112,3 +112,6 @@ h1, h2, h3, h4, h5, h6 {
   float: left;
   margin: 0 10px 0 0;
 }
+
+#mapCanvas label { width: auto; display:inline; }
+#mapCanvas img { max-width: none; }
